# book-recommender

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  download_dataset.py  experiment.ipynb  populate_db.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
chroma_langchain_db/a48d2f84-6d4c-48ad-9e43-f3f05a85e982/: index_metadata.pickle
nginx/: books.smarzaro.com.conf  books.smarzaro.com.conf.bak
scripts/: verify_connection.py
